# sldb

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  standards.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
.sldb/: README.md
.sldb/core/: store_index.yaml
contracts/: integration.contract.yaml
contracts/schemas/: sldb_document_payload.schema.json
desk/: CONTEXT-PILLS.md  IMPLEMENTATION-WORKFLOW.md  PROCEDURE.md  README.md  RITUALS.md  SELF.md  TESTING.md  __init__.py  feature-canonical-models-and-global-local-semantics.md  feature-link-recovery-compose.md  feature-semantic-indexing-dag.md  feature-store-tree-indexing.md  task-01-link-recovery-compose.md  task-02-store-tree-indexing.md  task-03-semantic-indexing-dag.md  task-04-canonical-models-and-global-local-semantics.md
desk/contexts/: README.md  pill-001-task-closure-commit.md  pill-002-test-real-cli-surfaces.md  pill-003-capture-cli-gaps.md  pills.md
desk/drawer/: README.md
desk/models/: __init__.py  board.py  pill.py  ritual.py  step.py  task.py
desk/pills/: README.md  pill-07-smg-ir-boundary.md  pill-08-section-context-index.md  pill-09-field-section-ownership.md  pill-11-context-index-persistence-boundary.md
desk/rituals/: closeout.md  execution.md  testing.md
desk/tasks/: Board.md  task-002-sldb-capability-audit.md  task-003-model-docs-workspace.md  task-005-structure-desk-ritual-docs.md  task-006-extend-routine-to-drawer.md  task-007-fix-empty-list-updates.md  task-008-add-untrack-flow.md  task-01-link-recovery-and-compose.md  task-011-extend-model-cli-field-editing.md  task-012-support-structured-model-composition.md  task-02-store-tree-indexing.md  (+5 more)
docs/: README.md  __init__.py  models.py  packaging instructions.md  workspaces.md
drawer/: README.md
drawer/rituals/: triage.md
tests/: conftest.py  test_cli_reconciliation.py  test_cli_v2.py  test_composition.py  test_field_ownership.py  test_links.py  test_marker_invariants.py  test_standalone.py  test_store_readme_doc.py  test_validation_semantics.py
(+135 files in other folders)
