[project]
name = "nldb"
version = "0.1.0"
description = "Natural Language Database Engine - Structured Markdown to Pydantic and back"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
nldb = "nldb.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nldb = ["templates/*.md"]
"nldb.templates.example_bundle" = ["*.md", "*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
